sas-core/main/default/objects/SurveyInvitation/fields/ChatSurvey__c.field-meta.xml
<CustomField>
    <fullName>ChatSurvey__c</fullName>
    <formula>IF(ISPICKVAL(FCS_RelatedCase__r.Origin ,&apos;CHAT&apos;),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChatSurvey</label>
    <type>Checkbox</type>
</CustomField>