sas-core/main/default/objects/SurveyInvitation/fields/FCS_NumberOfResponses__c.field-meta.xml
<CustomField>
    <fullName>FCS_NumberOfResponses__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the amount of responses made for each link. Used in process and trigger to restrict responses to one but still store history.</description>
    <inlineHelpText>Historical count of all Survey Responses from the related link.</inlineHelpText>
    <label>Number of Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>