sas-core/main/default/objects/SurveyInvitation/fields/FCS_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>FCS_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Related_Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>